# Timer

./: 00_START_HERE.md  ARCHITECTURE.md  CMakeLists.txt  DELIVERY.md  INDEX.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  TEST_PLAN.md  TimerApp.sln  build.sh  tizen-manifest.xml  validate.sh
TimerService/: CMakeLists.txt  TimerService.csproj
TimerService/inc/: timer_service.h
TimerService/src/: AssemblyInfo.cs  TimerManager.cs  timer_service.cpp
TimerUI/: TimerUI.csproj  tizen-manifest.xml
TimerUI/src/: AssemblyInfo.cs  MainPage.cs  MainWindow.cs  Program.cs  TimerFinishPage.cs  TimerListPage.cs  TimerRunningPage.cs
